Fix notification button on mobile

--- a/src/less/partials/header.less
+++ b/src/less/partials/header.less
@@ -394,8 +394,6 @@ a.navbar-back {
     }
 
 
-
-
     .notification-nav {
         position: absolute;
         top: 5px;
@@ -407,7 +405,11 @@ a.navbar-back {
         }
 
         > li > a {
-            padding-right:5px;
+            width: 50px;
+            display: inline-block;
+            padding-right:15px;
+            top:-2px;
+            padding-top:12px;
         }
 
         .open .dropdown-menu {
